# prod-monitoring-agent

./: .gitignore  LLM_CONFIGURATION.md  README.md  pyproject.toml
agents/: log_monitor.py
agents/llm/: __init__.py  config.py  llm_factory.py  ticket_generator.py
api/: main.py
api/config/: queries.py
api/controllers/: postgres_service.py  services.py
api/database/: session.py
api/exceptions/: exceptions.py
api/middleware/: error_handler.py
api/models/: models.py
api/routes/: routes.py
api/schemas/: base_schema.py  schema.py
