[project]
name = "prod-monitoring"
version = "0.1.0"
description = "Production Monitoring Service"
authors = [
    {name = "sanketika"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "fastapi (>=0.116.2,<0.117.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "pydantic (>=2.11.9,<3.0.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "greenlet (>=3.2.4,<4.0.0)",
    "mcp (>=1.14.1,<2.0.0)",
    "logparser (>=0.8.4,<0.9.0)",
    "requests (>=2.32.5,<3.0.0)",
    "psycopg (>=3.2.10,<4.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "langchain (>=0.1.0,<1.0.0)",
    "langchain-openai (>=0.1.0,<1.0.0)",
    "tiktoken (>=0.5.0,<1.0.0)"
]


[tool.poetry]
packages = [{include = "api"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
